# ROS-2-Robot-Simulation-Competition

./: .clang-format  .gitignore  README.md  package-lock.json
install/: local_setup.sh  setup.sh
install/base_msgs/share/base_msgs/: local_setup.sh  package.sh  package.xml
install/data_plot/share/data_plot/: package.sh  package.xml
install/planning/lib/planning/: planning_node
install/planning/share/planning/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
src/base_msgs/: CMakeLists.txt  package.xml
src/base_msgs/msg/: LocalPath.msg  LocalPathPoint.msg  LocalSpeeds.msg  LocalSpeedsPoint.msg  LocalTrajectory.msg  LocalTrajectoryPoint.msg  ObsInfo.msg  PNCMap.msg  PlotInfo.msg  Referline.msg  ReferlinePoint.msg
src/base_msgs/srv/: GlobalPathServer.srv  PNCMapService.srv
src/config/: planning_dynamic_obs_config.yaml
src/data_plot/: package.xml  setup.py
src/data_plot/data_plot/: data_plot.py
src/planning/: CMakeLists.txt  package.xml
src/planning/gazebo/: 零件1.STL  零件2.STL  零件3.STL
src/planning/launch/: display_photo_car_launch.py  display_photo_car_source_launch.py  gazebo_sim.launch.py  gazebo_world.launch.py  planning_launch.py
src/planning/models/disaster_sign/: model.config  model.sdf
src/planning/models/pushable_obstacle/: model.config  model.sdf
src/planning/rviz/: photo_car.rviz  planning.rviz
src/planning/src/: planning_node.cpp
src/planning/src/common/: CMakeLists.txt
src/planning/src/common/config_reader/: config_reader.cpp  config_reader.h
src/planning/src/common/math/: curve.cpp  curve.h  polynomial_curve.cpp  polynomial_curve.h
src/planning/src/decision_center/: CMakeLists.txt  decision_center.cpp  decision_center.h
src/planning/src/global_planner/: CMakeLists.txt  global_path_server.cpp  global_path_server.h  global_planner_base.h
src/planning/src/global_planner/global_planner_normal/: global_planner_normal.cpp  global_planner_normal.h
src/planning/src/local_planner/: CMakeLists.txt  local_trajectory_combiner.cpp  local_trajectory_combiner.h
src/planning/src/local_planning/: CMakeLists.txt  local_trajectory_combiner.h  locla_trajectory_combiner.cpp
src/planning/src/local_planning/local_path/: local_path_planner.cpp  local_path_planner.h  local_path_smoother.cpp  local_path_smoother.h
src/planning/src/local_planning/local_speeds/: local_speeds_planner.cpp  local_speeds_planner.h  local_speeds_smoother.cpp  local_speeds_smoother.h
src/planning/src/move_cmd/: CMakeLists.txt  car_move_cmd.cpp  car_move_cmd.h  obs_move_cmd.cpp  obs_move_cmd.h
src/planning/src/planning_process/: CMakeLists.txt  planning_process.cpp  planning_process.h  planning_process_main.cpp
src/planning/src/pnc_map_creator/: CMakeLists.txt  pnc_map_creator_base.h  pnc_map_server.cpp  pnc_map_server.h
src/planning/src/pnc_map_creator/pnc_map_global/: pnc_map_global.cpp  pnc_map_global.h
src/planning/src/reference_line/: CMakeLists.txt  reference_line_creator.cpp  reference_line_creator.h  reference_line_smoother.cpp  reference_line_smoother.h
src/planning/src/vehicle_info/: CMakeLists.txt  vehicle_info.h
src/planning/src/vehicle_info/main_car/: main_car_info.cpp  main_car_info.h
src/planning/src/vehicle_info/obs/: obs_info.cpp  obs_info.h
src/planning/urdf/main_car/: car.xacro  car_base.xacro  car_camera.xacro  car_gazebo.xacro  car_radar.xacro  car_wheels.xacro
src/planning/world/: factory.world
src/planning/worlds/: factory.world
test/: test_for_python.py
test/install/: local_setup.sh  setup.sh
test/install/learning_pkg_python/share/learning_pkg_python/: package.bash  package.ps1  package.sh  package.xml  package.zsh
test/learning_pkg_python/: setup.py
test/log/: latest_build
